# NAGA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autoformat.sh  sample.cu
examples/: batched_knn_search.cu  batched_matrix_inversion.cu  cgal_2d_mesh.cu  cgal_3d_mesh.cu  knn_validation_3d.cu  lbm_streaming_tests_3d.cu  nd_cubic_segmentation.cu  nonlocal_advection.cu  nonlocal_advection_3d.cu  nonlocal_divergence.cu  nonlocal_divergence_3d.cu  nonlocal_lattice_boltzmann.cu  nonlocal_lattice_boltzmann_3d.cu  nonlocal_lbm_pulse_3d.cu  nonlocal_lbm_utils.cuh  pimesh.cu  radial_point_interpolation.cu  radial_point_interpolation_3d.cu  ranges_example.cu  rectangular_partitioner.cu  sparse_gemm.cu  sparse_matrix_vector_mult.cu  utils.hpp
include/naga/: defines.h
include/naga/cuda/: context_manager.cuh  context_manager.hpp  cuda.cuh  cuda.hpp  error.hpp  errors.hpp  kernel_dispatch.cuh  stream.cuh  stream.hpp  synchronization.cuh
include/naga_tmp/: array.cuh  dim4.cuh  distributed_buffer_api.hpp  stripped_array.cuh
include/naga_tmp/cuda/: cuda.cuh  error.cuh  kernel_dispatch.cuh  launch_kernel.cuh  runtime.cuh  stream.cuh  synchronization.cuh
naga/: compatability.h  distance_functions.cuh  distance_functions.hpp  math.cuh  math.hpp  path.hpp  point.cuh  point.hpp  point_map.cuh  runtime.cuh
naga/detail/: buffer.hpp  cublas.cuh  cusparse.cuh  device_accessor.hpp  host_accessor.hpp  nanoflann_utils.h
naga/fluids/: nonlocal_lattice_boltzmann.cuh  nonlocal_lbm_solver.cuh
naga/fluids/nonlocal_lattice_boltzmann/: d2q9_lattice.cuh  d3q27_lattice.cuh  density_source.cuh  lattices.cuh  node_provider.cuh  simulation_domain.cuh  simulation_engine.cuh  simulation_nodes.cuh  simulation_observer.cuh  simulation_variables.cuh
naga/fluids/nonlocal_lattice_boltzmann/detail/: collision_term.cuh  d2q9_lattice.cuh  d3q27_lattice.cuh  density_source.cuh  equilibrium_distribution.cuh  equilibrium_distribution.inl  hycaps2d_load_domain.cuh  hycaps2d_load_domain.inl  hycaps3d_load_domain.cuh  hycaps3d_load_domain.inl  lattices.cuh  pde_right_hand_side.cuh  pml_absorption.cuh  pml_absorption.inl  pml_absorption_2d.cuh  pml_absorption_2d.inl  pml_term.cuh  rk4_solver.cuh  simulation_engine.cuh  subtask_factory.h
naga/fluids/nonlocal_lattice_boltzmann/node_providers/: uniform_grid_provider.cuh
naga/fluids/nonlocal_lattice_boltzmann/node_providers/detail/: uniform_grid_provider.cuh  uniform_grid_provider.inl
naga/fluids/nonlocal_lattice_boltzmann/node_providers/experimental/: conforming_point_cloud_provider.cuh
naga/fluids/nonlocal_lattice_boltzmann/node_providers/experimental/detail/: conforming_point_cloud_provider.hpp
naga/fluids/nonlocal_lattice_boltzmann/simulation_observers/: audio_sink_observer.cuh  density_observer.cuh  vdb_grid_observer.cuh  vtk_observer.cuh
naga/fluids/nonlocal_lbm_solver/: simulation_domain.cuh  solver.cuh
naga/fluids/nonlocal_lbm_solver/detail/: hycaps2d_load_domain.inl  hycaps3d_load_domain.inl
naga/interface/: buffer.hpp  device_accessor.cuh  host_accessor.hpp  runtime_traits.cuh
naga/interpolation/: radial_point_method.cuh
naga/interpolation/detail/: radial_point_method.cuh
naga/linalg/: batched_matrix_inverse.cuh  matrix.cuh
naga/linalg/detail/: batched_matrix_inverse.cuh
naga/mesh/: closed_contour.cuh  closed_surface.cuh  triangular_mesh.cuh
naga/mesh/experimental/: closed_contour.hpp  triangular_mesh.hpp
naga/nonlocal_calculus/: advection.cuh  divergence.cuh  operators.cuh
naga/nonlocal_calculus/detail/: divergence.cuh  divergence.inl  quadrature_points.cuh
naga/particle_partitioning/: rectangular_partitioner.cuh
naga/particle_partitioning/detail/: rectangular_partitioner.inl
naga/particle_segmentation/: nd_cubic_segmentation.cuh  nearest_neighbors.cuh  rectangular_partitioner.cuh
naga/particle_segmentation/detail/: nd_cubic_segmentation.cuh  nd_cubic_segmentation.inl  rectangular_partitioner.cuh  rectangular_partitioner.inl
naga/ranges/: uniform_grid.cuh
naga/regions/: hypersphere.cuh  nd_rectangular_prism.cuh
naga/segmentation/: nd_cubic_segmentation.cuh  nearest_neighbors.cuh
naga/segmentation/detail/: nd_cubic_segmentation.cuh  nd_cubic_segmentation.inl
naga/uvm_runtime/: buffer.hpp  device_accessor.cuh  host_accessor.hpp  runtime.cuh  runtime_traits.cuh
resources/lbm_example_domains/rectangle/: domain_imported_contour_normals.csv  sdf2d_results.csv
source/fluids/nonlocal_lattice_boltzmann/node_providers/experimental/detail/: conforming_point_cloud_provider.cpp  conforming_point_cloud_provider.cu  conforming_point_cloud_provider_2.cpp  conforming_point_cloud_provider_3.cpp
source/fluids/nonlocal_lattice_boltzmann/simulation_observers/: vdb_grid_observer.cpp
tests/: CMakeLists.txt
tests/naga/: array_tests.cu
tests/naga/cuda/: cuda_tests.cu
